--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/comfortaa</item>
         <item>@font/comfortaa_bold</item>
         <item>@font/comfortaa_light</item>
+        <item>@font/roboto_black</item>
     </array>
 </resources>
