--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         app:fontFamily="@font/comfortaa" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress3"
+        android:id="@+id/input_login_email"
         android:layout_width="389dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -41,7 +41,7 @@
         android:textColorHint="#494646" />
 
     <EditText
-        android:id="@+id/editT_senha"
+        android:id="@+id/input_login_senha"
         android:layout_width="389dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -58,7 +58,7 @@
         android:textColorHint="#494646" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btn_logar"
         android:layout_width="392dp"
         android:layout_height="66dp"
         android:layout_marginStart="10dp"
