--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -41,7 +41,7 @@
                 app:fontFamily="@font/comfortaa" />
 
             <EditText
-                android:id="@+id/input_nome"
+                android:id="@+id/input_nomea"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -59,7 +59,7 @@
                 android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/input_email"
+                android:id="@+id/input_emaila"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -77,7 +77,7 @@
                 android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/input_senha2"
+                android:id="@+id/input_senha2a"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -95,7 +95,7 @@
                 android:autofillHints="" />
 
             <EditText
-                android:id="@+id/input_idade"
+                android:id="@+id/input_idadea"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -126,7 +126,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/input_UBS"
+                android:id="@+id/input_UBSa"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -144,7 +144,7 @@
                 android:autofillHints="" />
 
             <EditText
-                android:id="@+id/input_marca"
+                android:id="@+id/input_marcaa"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -161,7 +161,7 @@
                 android:textSize="15sp"
                 android:autofillHints="" />
             <EditText
-                android:id="@+id/input_dose"
+                android:id="@+id/input_dosea"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
@@ -179,7 +179,7 @@
                 android:autofillHints=""/>
 
             <EditText
-                android:id="@+id/input_data"
+                android:id="@+id/input_dataa"
                 android:layout_width="389dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="10dp"
